Package: startup
================

Version: 0.7.0-9000 [2017-09-07]

 o ...
 

Version: 0.7.0 [2017-09-04]

SIGNIFICANT CHANGES:

 o Package requires R (>= 2.14.0; Oct 2011) - was R (>= 2.13.0; Apr 2011).

NEW FEATURES:

 o Convenient session details are now gathered and recorded as R options
   immediately after processing '.Renviron.d' files.  These options, prefixed
   'startup.session.', are available while processing '.Rprofile.d' files and,
   by default, also after startup::startup() has completed.  For information
   on session details recorded, see help("startup_session_options").

 o Added a package vignette (available only in R >= 3.0.2).
 
 
Version: 0.6.1 [2017-05-16]

BUG FIXES:

 o startup() ignores more of the hidden files and folders that macOS may create
   and which should not be sourced during startup.  For instance, when copying
   a file 'foo.R' to a non-macOS file system, an auxillary file '._foo.R' may
   be created as well.
 

Version: 0.6.0 [2017-04-30]

SIGNIFICANT CHANGES:

 o Package requires R (>= 2.13.0; Apr 2011) - was R (>= 2.12.0; Oct 2010).

NEW FEATURES:

 o New conditional <key>=<value> specification: an unknown '<key>' (i.e. one
   that is not one of the known sysinfo() fields or 'package') will be
   interpreted as the name of an environment variable.  For instance, files
   path/LANGUAGE=en/*.R will be included only if system environment variable
   LANGUAGE equals 'en' (or is not set).

 o startup::install() now injects 'try(startup::startup())' such that 
   install.packages("startup") will work even when 'startup' is not installed,
   e.g. after a major-version R update.

 o startup::install() and startup::uninstall() now output messages on what is
   done and why, and they now return the R startup file modified. They also
   produce a warning if startup is already installed or uninstalled,
   respectively.

 o startup::install() gained argument 'overwrite' to control whether to append